--- a/Lab6.tex
+++ b/Lab6.tex
@@ -85,7 +85,7 @@ answer from one measurement. And of course that will work. But I want to see if 
 We learned earlier that we can take more than one measurement, and use those
 measurements together with a curve fit to solve for a fit parameter. I\ want
 you to do this. The quantity $\mu$ should be in one of the fit parameters.
-Then you can solve for $\mu$ using the fit parameter given by your python
+Then you can solve for $\mu$ using the fit parameter given by your Python
 linear fit code. This is a more robust way to find $\mu,$ and it is the way I want you to proceed (Even
 if you solve for $\mu$ several times and take a mean and standard
 deviation--it will work and it is a good experimental technique--but I want to
