--- a/Lab7.tex
+++ b/Lab7.tex
@@ -843,7 +843,7 @@ t=[t0]
 
 \end{lstlisting}
 Notice that all three of these are in square brackets, but there aren't any on on the variables I set above (look back to where I set |x0|).  
-Putting square brackets around something tells python that it is a list.  Since we?re going to be adding more x,v, and t values, we need to warn python that these are going to be lists.
+Putting square brackets around something tells Python that it is a list.  Since we?re going to be adding more x,v, and t values, we need to warn Python that these are going to be lists.
 Having the square brackets is essential on these. Whereas, |x0| is just a single value and will always be a single value, so it didn?t need square brackets.
 
 This next section of code is what we call a loop:
