--- a/Lab4.tex
+++ b/Lab4.tex
@@ -88,8 +88,8 @@ For reference, here is a figure with the best fit line for to the data.  The red
 \includegraphics{Lab4_figs/dataWfitRange.pdf}
 \end{center}
 
-Here's an example of a python function that takes in x and y values and returns the slope and intercept of the best fit line, with their errors.  It would be very go practice to read through it and see if you can figure out what each line does.
-\begin{lstlisting}[language=python]
+Here's an example of a Python function that takes in x and y values and returns the slope and intercept of the best fit line, with their errors.  It would be very go practice to read through it and see if you can figure out what each line does.
+\begin{lstlisting}[language=Python]
 def linearLeastSquares(x,y):
     #Import numpy
     import numpy as np
@@ -409,42 +409,42 @@ third part. But state whether you believe that $T\varpropto\sqrt{m}$
 \end{enumerate}
 
 \subsection{Second Part: fitting a line}
-In order to fit a line to your data, you'll need to teach python how to do a linear least squares fit using the equations and the example function in the lab introduction.  You will be doing many linear least squares fits, so it is in your best interest to create a least squares function in its own file that you can use in the future.  That way you don't have to copy and paste it over and over again. These steps will teach you how.
+In order to fit a line to your data, you'll need to teach Python how to do a linear least squares fit using the equations and the example function in the lab introduction.  You will be doing many linear least squares fits, so it is in your best interest to create a least squares function in its own file that you can use in the future.  That way you don't have to copy and paste it over and over again. These steps will teach you how.
 \begin{enumerate}
 \item Linearize your equation.  Remember, linear least squares fitting only works on lines.
 \item Type out the example program given in this lab's intro, and save it in the folder where you have been saving your other programs from lab.  Make sure that you match the indentation from the example.  Python uses indentation to tell where functions end.  Here's a quick example:
-\begin{lstlisting}[language=python]
+\begin{lstlisting}[language=Python]
 def line(x,m,b):
     return m*x+b
 \end{lstlisting}
 
-Notice the difference in indentation between the two lines. The "def" command tells python that you want to create your own function.  In this case, the function is called |line| and takes inputs |x|,|m|, and |b|.  The return command tells python what you want to get out of your function.  You could define a function this way and get the same result:
+Notice the difference in indentation between the two lines. The "def" command tells Python that you want to create your own function.  In this case, the function is called |line| and takes inputs |x|,|m|, and |b|.  The return command tells Python what you want to get out of your function.  You could define a function this way and get the same result:
 
-\begin{lstlisting}[language=python]
+\begin{lstlisting}[language=Python]
 def line(x,m,b):
     y=m*x+b
     return y
 \end{lstlisting}
 
 But you will get an error if you enter this:
-\begin{lstlisting}[language=python]
+\begin{lstlisting}[language=Python]
 def line(x,m,b):
     y=m*x+b
 return y
 \end{lstlisting}
-Indentation is very important in python.  When you define a function, everything that is indented below it is counted as part of that function.  Not indenting the return statement tells python that you've ended your function, and it won't know what to return.
+Indentation is very important in Python.  When you define a function, everything that is indented below it is counted as part of that function.  Not indenting the return statement tells Python that you've ended your function, and it won't know what to return.
 Here's one more example:
-\begin{lstlisting}[language=python]
+\begin{lstlisting}[language=Python]
 def line(x,m,b):
     y=m*x+b
     return y
 
 y=line(5,2,1)
 \end{lstlisting}
-The previous piece of code tells python what we want our function to be.  Then,  the very last line (notice that it is not indented) tells python that we want to use our function, and that we want |x=5|, |m=2|, and |b=1|.  Python will perform the operation and save the number 11 (5*2+1) into the variable |y|.  Python will also treat any variables inside of functions as separate from the ones outside, meaning the |y| in our function is independent of the |y| in the last line. Once you define a function, you can use it over and over again in your program.
+The previous piece of code tells Python what we want our function to be.  Then,  the very last line (notice that it is not indented) tells Python that we want to use our function, and that we want |x=5|, |m=2|, and |b=1|.  Python will perform the operation and save the number 11 (5*2+1) into the variable |y|.  Python will also treat any variables inside of functions as separate from the ones outside, meaning the |y| in our function is independent of the |y| in the last line. Once you define a function, you can use it over and over again in your program.
 
 \item Test your function.  Put these lines of code {\em after} your function: (you only have to choose one function call, but make sure your print statements match.)
-\begin{lstlisting}[language=python]
+\begin{lstlisting}[language=Python]
 xdata=[1,2,3,4,5,6]
 ydata=[1,2,3,4,5,6]
 #There are three different ways to call your function, pick one.  
@@ -470,7 +470,7 @@ print('Slope: {}+/-{}'.format(slope,slopeErr))
 print('Intercept: {}+/{}'.format(intercept,interceptErr))
 \end{lstlisting}
 If your program is working properly, it will print:
-\begin{lstlisting}[language=python]
+\begin{lstlisting}[language=Python]
 Slope: 1.0+/-0.0
 Intercept: 0.0+/0.0
 \end{lstlisting}
@@ -487,19 +487,19 @@ You should get a slope of 1 and an intercept of 0 if your function is working co
 
 Now start building a script to fit this week's data.
 \begin{enumerate}
-\item Open up a new python script and save it in the same directory as your least squares file.  Put this command at the top of your file: (For this example, the file with the least squares fitting functions in it was saved with the name |linearLeastSquaresFits.py|, change the name to match accordingly.)
-\begin{lstlisting}[language=python]
+\item Open up a new Python script and save it in the same directory as your least squares file.  Put this command at the top of your file: (For this example, the file with the least squares fitting functions in it was saved with the name |linearLeastSquaresFits.py|, change the name to match accordingly.)
+\begin{lstlisting}[language=Python]
 from linearLeastSquaresFits import *
 \end{lstlisting}
-This line tells python to load all of the functions in |linearLeastSquaresFits.py|.  You can now use your least squares fitting functions in this program.
+This line tells Python to load all of the functions in |linearLeastSquaresFits.py|.  You can now use your least squares fitting functions in this program.
 
-\item Load your data into your program.Doing math with data sets is easier in python if you use the numpy library.  It can be very helpful to save our data like this: (It would be good to give your data more descriptive names than |x_data| and |y_data|, and add comments.)
-\begin{lstlisting}[language=python]
+\item Load your data into your program.Doing math with data sets is easier in Python if you use the numpy library.  It can be very helpful to save our data like this: (It would be good to give your data more descriptive names than |x_data| and |y_data|, and add comments.)
+\begin{lstlisting}[language=Python]
 import numpy as np
 x_data=np.asarray([1,2,3,4,5])
 y_data=np.asarray([2.1, 3.9, 5.8, 8.4, 11])
 \end{lstlisting}
-As an experiment, tell python to |print(x_data*y\_data)| and see what happens.    Numpy arrays can only have numbers in them, and so multiplying two numpy arrays will multiply each item in the list individually.  Since python lists can have anything in them (numbers, words, other lists) python doesn't have a built in way to do math on entire lists without doing quite a bit more work.  That's mostly because it doesn't make any sense to say |5*'hello'|.
+As an experiment, tell Python to |print(x_data*y\_data)| and see what happens.    Numpy arrays can only have numbers in them, and so multiplying two numpy arrays will multiply each item in the list individually.  Since Python lists can have anything in them (numbers, words, other lists) Python doesn't have a built in way to do math on entire lists without doing quite a bit more work.  That's mostly because it doesn't make any sense to say |5*'hello'|.
 
 \item Do a least squares fit to your data using your fitting functions.
 
@@ -584,7 +584,7 @@ values for your constants, including uncertainties . Record your methods and res
 
 \begin{enumerate}
 \item An often useful tool, especially when your data is not naturally linear,
-is to plot it on a logarithmic scale. Create such a graph using python and attach it to your lab notebook.  The matplotlib function is \texttt{semilogy(x\_data,y\_data)}. Comment on what you see.
+is to plot it on a logarithmic scale. Create such a graph using Python and attach it to your lab notebook.  The matplotlib function is \texttt{semilogy(x\_data,y\_data)}. Comment on what you see.
 
 \item Don't forget to make good comments on what you did and how you did it in
 your lab book.
